# juniors_interview

./: .flake8  .gitignore  README.md  pyproject.toml
task1/: solution.py  test_1.py  tests.py
task1/solution/: main.py
task1/solution/tests/: conftest.py  test_decorator_strict.py
task1/solution/tests/functions/: functions.py
task1/solution/tools/decorators/: decorators.py
task1/solution/tools/decorators/utils/: utils.py
task2/: all_animals.json  beasts.csv  len_animals.csv  solution.py  task2.md  tests.py
task2/solution/: main.py
task2/solution/data/csv/: beasts.csv
task2/solution/settings/: settings.py
task2/solution/tests/: conftest.py  pytest.ini  settings.py
task2/solution/tests/files/: no_next.html  yes_next.html
task2/solution/tests/tests/: test_bs_tools.py  test_csv_tools.py  test_data_tools.py  test_requests_tools.py
task2/solution/tools/: bs_tools.py  csv_tools.py  data_tools.py  exception_classes.py  requests_tools.py
task3/: solution.py
task3/solution/: main.py
task3/solution/files/: periods.json
task3/solution/tests/: test_func.py
task3/solution/utils/: classes.py  utils.py
