[tool.poetry]
name = "testjunior"
version = "0.1.0"
description = ""
authors = ["Miron-Anosov <mairon26rus@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.11.2"
aiofile = "^3.9.0"
aiofiles = "^24.1.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
mypy = "^1.13.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
